# defeatbeta-api

./: .gitignore  CHANGELOG.rst  README.md  main.py  postBuild  pyproject.toml  requirements.txt  setup.py
.binder/: postBuild  pyproject.toml  requirements.txt
.github/workflows/: doctoc.yml  workflow.yml
client/: duckdb_client.py  duckdb_conf.py  hugging_face_client.py
data/: __init__.py  const.py  finance_item.py  finance_statement.py  print_visitor.py  statement.py  ticker.py
defeatbeta_api/: __init__.py  __version__.py
defeatbeta_api/client/: duckdb_client.py  duckdb_conf.py  hugging_face_client.py
defeatbeta_api/data/: company_meta.py  news.py  print_visitor.py  statement.py  ticker.py  tickers.py  transcripts.py  treasure.py
defeatbeta_api/data/sql/: select_all_by_symbol.sql  select_ebitda_and_revenue_by_industry.sql  select_gross_profit_and_revenue_by_industry.sql  select_margin_for_symbol.sql  select_market_cap_by_industry.sql  select_metric_calculate_yoy_growth_by_symbol.sql  select_net_income_and_revenue_by_industry.sql  select_news_by_symbol.sql  select_quarterly_book_value_of_equity_by_industry.sql  select_quarterly_book_value_of_equity_by_symbol.sql  select_quarterly_eps_yoy_growth_by_symbol.sql  select_revenue_breakdown_by_symbol.sql  select_roa_by_industry.sql  select_roa_by_symbol.sql  select_roe_by_industry.sql  select_roe_by_symbol.sql  select_roic_by_symbol.sql  select_statement_by_symbol.sql  select_tickers_by_industry.sql  select_ttm_ebitda_by_symbol.sql  select_ttm_fcf_by_symbol.sql  select_ttm_net_income_by_industry.sql  select_ttm_net_income_common_stockholders_by_symbol.sql  select_ttm_revenue_by_industry.sql  select_ttm_revenue_by_symbol.sql  select_wacc_by_symbol.sql  sql_loader.py
defeatbeta_api/reports/: tearsheet.html  tearsheet.py
defeatbeta_api/utils/: const.py  local_http_cache.py  util.py
doc/: Advanced.md  Advanced_Guide.md  Economy_Examples.md  Example.html  Example.md  Example_Guide.md  Growth_Examples.md  LLM_ChangeData_Example.md  LLM_ForecastData_Example.md  LLM_KeyData_Example.md  Profitability_Examples.md  README.md  Report_Examples.md  Transcripts_LLM_Examples.md  Value_Examples.md  finance_examples.md  index.html  value_examples.md
doc/api/: Advanced_Usage.md  DCF_Examples.md  Finance_Examples.md  FinancialReports_Integration.md  Info_Examples.md  LLM_ChangeData_Example.md  Report_Examples.md  Value_Examples.md
doc/finance/: finance_examples.md
doc/growth/: growth_examples.md
doc/information/: info_examples.md
doc/mcp/: Mcp_Use_Case.md  README.md  Talk_About_Breakdown.md  Talk_About_Growth.md  Talk_About_News.md  Talk_About_Officers.md  Talk_About_Price.md  Talk_About_Profile.md  Talk_About_Profitability.md  Talk_About_Statement.md  Talk_About_Transcripts.md  Talk_About_Valuation.md
doc/profitability/: profitability_examples.md
doc/value/: value_examples.md
mcp/: README.md  install  pyproject.toml  run.sh
mcp/src/defeatbeta_mcp/: server.py
mcp/src/defeatbeta_mcp/tools/: asserts.py  breakdown.py  cap.py  dcf.py  em.py  eps.py  growth.py  margin.py  meta.py  news.py  officers.py  pb.py  pe.py  peg.py  price.py  profile.py  ps.py  roa.py  roe.py  roic.py  sec_filing.py  segment.py  statement.py  symbols.py  transcripts.py  treasure.py  util.py
notebooks/: 00_tutorial_info.ipynb  01_tutorial_finance.ipynb  02_tutorial_value.ipynb  03_tutorial_profitability.ipynb  05_tutorial_report.ipynb  06_tutorial_dcf.ipynb
skills/: README.md
skills/defeatbeta-analyst/: SKILL.md
specs/: 01-architecture-overview.md  02-data-pipeline.md  03-huggingface-publishing.md  04-client-library.md  05-data-schemas.md  06-implementation-roadmap.md  07-testing-strategy.md  08-configuration.md  09-error-handling.md  10-security.md  README.md
test/: demo.py  test_ai_transcripts.py  test_cache.py  test_duckdb_client.py  test_hugging_face_client.py  test_huggingface_datasets.py  test_industry.py  test_report.py  test_ticker.py  test_ticker_multithreaded.py  test_tickers.py  test_util.py
utils/: const.py  util.py
(+12 files in other folders)
