[project]
name = "defeatbeta-notebook"
version = "0.0.1"
description = "Notebook for defeatbeta-api"
requires-python = ">=3.11"

dependencies = [
    "defeatbeta-api"
]

[project.scripts]
defeatbeta-mcp = "defeatbeta_mcp.server:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
